--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: ruby
 rvm:
   - 1.9.2
-  - 1.9.3
-  - jruby-18mode
-  - jruby-19mode
+ env:
+  - DB=sqlite
+script: 
+  - RAILS_ENV=test bundle exec rake db:migrate --trace   
 script: bundle exec rake
