--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ rvm:
  env:
   - DB=sqlite
 script: 
-  - RAILS_ENV=test bundle exec rake db:migrate --trace   
+  - RAILS_ENV=test bundle exec rake db:test:prepare --trace   
 script: bundle exec rake
