--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ rvm:
   - 1.9.2
  env:
   - DB=sqlite
-script: 
-  - RAILS_ENV=test bundle exec rake db:test:prepare --trace   
+before_script: 
+  - "RAILS_ENV=test bundle exec rake db:test:prepare --trace"
 script: bundle exec rake
