--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,7 @@ rvm:
  env:
   - DB=sqlite
 before_script: 
-  - "RAILS_ENV=test bundle exec rake db:migrate --trace"
-script: bundle exec rake
+  - "RAILS_ENV=test bundle exec rake db:test:prepare --trace"
+script: 
+- RAILS_ENV=test bundle exec rake db:migrate --trace
+- bundle exec rake
