--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,6 @@ rvm:
   - 1.9.2
  env:
   - DB=sqlite
-before_script: 
-  - "RAILS_ENV=test bundle exec rake db:test:prepare --trace"
+before_script: bundle exec rake db:migrate
 script: 
-- RAILS_ENV=test bundle exec rake db:migrate --trace
 - bundle exec rake
