--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: ruby
 rvm:
   - 1.9.2
- env:
-  - DB=sqlite
-before_script: bundle exec rake db:test:prepare
-script: 
-- bundle exec rake
+before_script: bundle exec rake db:migrate
+script: bundle exec rake test
