--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: ruby
 rvm:
   - 1.9.2
-before_script: bundle exec rake db:migrate
+before_script: 
+ - bundle exec rake db:migrate
+ - bundle exec rake db:seed
 script: bundle exec rake test
