fix travis failing on config.yml not being there

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ rvm:
 before_script: 
  - bundle exec rake db:migrate
  - bundle exec rake db:seed
+ - "cp config/config.example.yml config.yml"
 script: bundle exec rake test
