access token is added to config.yml

--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -3,6 +3,7 @@ defaults: &defaults
     :challenges: 'http://cs-api-sandbox.herokuapp.com/v1/challenges'
     :members: 'http://cs-api-sandbox.herokuapp.com/v1/members'
   :expiry: 5
+  :access_token: "ACCESS_TOKEN"
 
 development:
   <<: *defaults
