--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -2,6 +2,7 @@ defaults: &defaults
   :cs_api:
     :challenges: 'http://cs-api-sandbox.herokuapp.com/v1/challenges'
     :members: 'http://cs-api-sandbox.herokuapp.com/v1/members'
+    :accounts: 'http://cs-api-sandbox.herokuapp.com/v1/accounts'
   :expiry: 5
   :s3:
     :key: "key"
