implements '/account/public_profile' page

--- a/.env-example
+++ b/.env-example
@@ -22,3 +22,8 @@ AWS_BUCKET=
 RECAPTCHA_PUBLIC_KEY=
 RECAPTCHA_PRIVATE_KEY=
 WEBSITE_URL=http://localhost:3000
+DOCUSIGN_SIGNING_DOMAIN=
+DOCUSIGN_US_TAX_TEMPLATE=
+DOCUSIGN_INTL_TAX_TEMPLATE=
+CLOUDINARY_URL=
+
