--- a/.env-example
+++ b/.env-example
@@ -26,4 +26,5 @@ DOCUSIGN_SIGNING_DOMAIN=
 DOCUSIGN_US_TAX_TEMPLATE=
 DOCUSIGN_INTL_TAX_TEMPLATE=
 CLOUDINARY_URL=
+ENCRYPTION_KEY=YPeUxbABC11&?D]3J$xYYXPf
 
