moved settings to env

--- a/.env-example
+++ b/.env-example
@@ -3,6 +3,11 @@ SFDC_CLIENT_ID=
 SFDC_CLIENT_SECRET=
 SFDC_PUBLIC_USERNAME=
 SFDC_PUBLIC_PASSWORD=
+DEV_MAILSERVER_ADDRESS=smtp.gmail.com
+DEV_MAILSERVER_PORT=587
+DEV_MAILSERVER_DOMAIN=gmail.com
+DEV_MAILSERVER_USERNAME=
+DEV_MAILSERVER_PASSWORD=
 CS_API_URL=http://cs-api-sandbox.herokuapp.com/v1
 CS_API_EXPIRY=5
 SFDC_HOST=test.salesforce.com
