--- a/.env-example
+++ b/.env-example
@@ -15,6 +15,7 @@ SFDC_ADMIN_USERNAME=
 SFDC_ADMIN_PASSWORD=
 THIRD_PARTY_PASSWORD=
 SFDC_APEXREST_URL=https://cs9.salesforce.com/services/apexrest/v.9
+SFDC_INSTANCE_URL=https://cs9.salesforce.com
 GITHUB_ID=
 GITHUB_SECRET=
 TWITTER_KEY=
